Item updating now works, so the dirty queue is apparently going to work. Implemented visiting URLs and DOIs using intents.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,5 +29,9 @@
                   android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
+        <activity android:name=".ItemDataActivity"
+                  android:label="@string/app_name"
+                  android:launchMode="standard">
+        </activity>
     </application>
 </manifest>
