--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,5 +41,9 @@
                   android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
+        <activity android:name=".SettingsActivity"
+                  android:label="@string/app_name"
+                  android:launchMode="standard">
+        </activity>
     </application>
 </manifest>
