--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,11 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 				<data android:scheme="zotero" />
             </intent-filter>
+            <intent-filter>
+            	<action android:name="android.intent.action.SEND" />
+            	<category android:name="android.intent.category.DEFAULT" />
+            	<data android:mimeType="text/plain" />
+        	</intent-filter>
         </activity>
         <activity android:name=".CollectionActivity"
                   android:label="@string/app_name"
