--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,11 @@
         <activity android:name=".ItemActivity"
                   android:label="@string/app_name"
                   android:launchMode="standard">
+            <intent-filter>
+            	<action android:name="android.intent.action.SEARCH" />
+        	</intent-filter>
+        	<meta-data android:name="android.app.searchable"
+                   android:resource="@xml/searchable"/>
         </activity>
         <activity android:name=".ItemDataActivity"
                   android:label="@string/app_name"
