--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.gimranov.zandy.client"
+      package="com.gimranov.zandy.app"
       android:versionCode="5"
       android:versionName="1.1.0">
     <uses-sdk android:minSdkVersion="8" />
@@ -56,8 +56,8 @@
                   android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
-        <activity android:name=".AttachmentActivity"
-                  android:label="@string/app_name"
+        <activity android:name="AttachmentActivity"
+            	  android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
     </application>
