first identifier lookup

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,11 +56,15 @@
                   android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
-        <activity android:name="AttachmentActivity"
+        <activity android:name=".AttachmentActivity"
             	  android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
-        <activity android:name="CollectionMembershipActivity"
+        <activity android:name=".CollectionMembershipActivity"
+            	  android:label="@string/app_name"
+                  android:launchMode="standard">
+        </activity>
+        <activity android:name=".LookupActivity"
             	  android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
