proof of concept: WevView for notes
read-only WebView is implemented for standalone notes and for note in attachment. Default behavior was changed for attached notes. One has to long click to edit (in plain text).

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,5 +68,6 @@
             	  android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
+        <activity android:name=".NoteActivity" android:label="@string/app_name" android:launchMode="standard"></activity>
     </application>
 </manifest>
