--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,6 +68,10 @@
             	  android:label="@string/app_name"
                   android:launchMode="standard">
         </activity>
+        <activity android:name=".RequestActivity"
+            	  android:label="@string/app_name"
+                  android:launchMode="standard">
+        </activity>
         <activity android:name=".NoteActivity" android:label="@string/app_name" android:launchMode="standard"></activity>
     </application>
 </manifest>
