--- a/app/.classpath
+++ b/app/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="lib" path="/home/ajlyon/.m2/repository/oauth/signpost/signpost-core/1.2.1.1/signpost-core-1.2.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/ajlyon/.m2/repository/oauth/signpost/signpost-commonshttp4/1.2.1.1/signpost-commonshttp4-1.2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/guyang/Downloads/signpost-core-1.2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/guyang/Downloads/signpost-commonshttp4-1.2.1.1.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
