--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.gimranov.zandy.app"
       android:versionCode="11"
       android:versionName="1.2.1">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="11" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     
