--- a/app/.classpath
+++ b/app/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="/home/guyang/Downloads/signpost-core-1.2.1.1.jar"/>
 	<classpathentry kind="lib" path="/home/guyang/Downloads/signpost-commonshttp4-1.2.1.1.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="/DiceWithBuddies/libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
