--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -4,8 +4,8 @@
       android:versionCode="19"
       android:versionName="1.3.5">
     <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="11" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
     <application android:icon="@drawable/zandy72" android:label="@string/app_name">
         <activity android:name=".MainActivity"
