--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'android'
 
 dependencies {
     compile 'oauth.signpost:signpost-commonshttp4:1.2.1.2'
+    compile 'com.intellij:annotations:12.0'
 }
 
 android {
