--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.gimranov.zandy.app.Application"
         android:icon="@drawable/zandy72"
         android:label="@string/app_name">
         <activity
