--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
 language: java
+jdk: oraclejdk7
 before_install:
-  # download the latest android sdk and unzip
-  - wget http://dl.google.com/android/android-sdk_r22-linux.tgz
-  - tar -zxf android-sdk_r22-linux.tgz
-  # setup your ANDROID_HOME and PATH environment variables
-  # use ~/builds/[Github username]/[project]/android-sdk-linux
-  - export ANDROID_HOME=~/builds/ajlyon/zandy/android-sdk-linux
+  # Base Android SDK
+  - wget http://dl.google.com/android/android-sdk_r22.3-linux.tgz
+  - tar xzf android-sdk_r22.3-linux.tgz
+  - export ANDROID_HOME=$PWD/android-sdk-linux
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-  # only update the sdk for the tools and platform-tools (1,2) and whatever api level
-  # you are building for android (run "android list sdk" to get the full list.  9 = 2.3.3 or API level 10
-  - android update sdk --filter 19 --no-ui --force
+
+  # Build tools
+  - wget https://dl-ssl.google.com/android/repository/build-tools_r19-linux.zip
+  - unzip build-tools_r19-linux.zip -d $ANDROID_HOME
+  - mkdir -p $ANDROID_HOME/build-tools/
+  - mv $ANDROID_HOME/android-4.4 $ANDROID_HOME/build-tools/19
+
+  # Install required components.
+  # For a full list, run `android list sdk -a --extended`
+  # Other relevant API's
+  - echo yes | android update sdk --filter platform-tools --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter android-18 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter android-19 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-android-support --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-android-m2repository --no-ui --force > /dev/null
