fix packaging-- new apache deps broke packaging

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ android {
             proguardFile getDefaultProguardFile('proguard-android.txt')
         }
     }
+    
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+    }
 }
 
 task wrapper(type: Wrapper) {
