--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile 'com.intellij:annotations:12.0'
     compile 'com.crashlytics.android:crashlytics:1.+'
     compile 'commons-io:commons-io:2.4'
+    compile 'com.squareup:otto:1.3.4'
 }
 
 android {
