--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,9 @@ android {
     signingConfigs {
         release {
             storeFile file("keystore")
-            storePassword (hasProperty('zandyStorePassword') ? zandyStorePassword : "")
+            storePassword zandyStorePassword
             keyAlias "zandy"
-            keyPassword (hasProperty('zandyKeyPassword') ? zandyKeyPassword : "")
+            keyPassword zandyKeyPassword
         }
     }
 
