--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,22 @@ dependencies {
     compile 'com.crashlytics.android:crashlytics:1.+'
     compile 'commons-io:commons-io:2.4'
     compile 'com.squareup:otto:1.3.4'
+    compile 'com.google.zxing:android-integration:2.3.0'
 }
 
 android {
     compileSdkVersion 19
     buildToolsVersion "19.0.1"
+
+    defaultConfig {
+        versionCode 1410
+        versionName "1.4.1"
+    }
+
+    productFlavors {
+        amazon
+        google
+    }
 
     signingConfigs {
         release {
