--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,14 @@ buildscript {
         maven { url 'http://download.crashlytics.com/maven' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.7.+'
+        classpath 'com.android.tools.build:gradle:0.8.+'
         classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
     }
 }
 
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url 'http://download.crashlytics.com/maven' }
 }
@@ -25,6 +26,8 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.zxing:android-integration:2.3.0'
+
+    compile project(":libzotero-java")
 }
 
 android {
