--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         maven { url 'http://download.crashlytics.com/maven' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.8.+'
+        classpath 'com.android.tools.build:gradle:0.12.+'
         classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
     }
 }
@@ -27,16 +27,16 @@ dependencies {
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.zxing:android-integration:2.3.0'
 
-    compile project(":libzotero-java")
+//    compile project(":libzotero-java")
 }
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion "20.0.0"
 
     defaultConfig {
-        versionCode 1410
-        versionName "1.4.1"
+        versionCode 1420
+        versionName "1.4.2"
     }
 
     productFlavors {
@@ -60,6 +60,10 @@ android {
             runProguard false
             proguardFile getDefaultProguardFile('proguard-android.txt')
         }
+    }
+
+    lintOptions {
+        abortOnError false
     }
     
     packagingOptions {
