Use magic to let the build script prompt for passwords

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import groovy.swing.SwingBuilder
+
 buildscript {
     repositories {
         mavenCentral()
@@ -30,6 +32,7 @@ dependencies {
 //    compile project(":libzotero-java")
 }
 
+
 android {
     compileSdkVersion 19
     buildToolsVersion "20.0.0"
@@ -47,9 +50,9 @@ android {
     signingConfigs {
         release {
             storeFile file("keystore")
-            storePassword zandyStorePassword
             keyAlias "zandy"
-            keyPassword zandyKeyPassword
+            storePassword ""
+            keyPassword "" 
         }
     }
 
@@ -71,6 +74,60 @@ android {
     }
 }
 
+gradle.taskGraph.whenReady { taskGraph ->
+
+  println taskGraph.allTasks
+  if(taskGraph.hasTask(':zandy:assembleGoogleRelease')) {
+ 
+    def storePass = ''
+    def keyPass = ''
+    if(System.console() == null) {
+      new SwingBuilder().edt {
+        dialog(modal: true, // Otherwise the build will continue running before you closed the dialog
+            title: 'Enter password', // Dialog title
+            alwaysOnTop: true, // pretty much what the name says
+            resizable: false, // Don't allow the user to resize the dialog
+            locationRelativeTo: null, // Place dialog in center of the screen
+            pack: true, // We need to pack the dialog (so it will take the size of it's children)
+            show: true // Let's show it
+        ) {
+          vbox { // Put everything below each other
+            label(text: "Please enter store passphrase:")
+            storeInput = passwordField()
+            label(text: "Please enter key passphrase:")
+            keyInput = passwordField()
+            button(defaultButton: true, text: 'OK', actionPerformed: {
+              storePass = storeInput.password; // Set pass variable to value of input field
+              keyPass = storeInput.password; // Set pass variable to value of input field
+              dispose(); // Close dialog
+            })
+          } // vbox end
+        } // dialog end
+      } // edt end
+    } else {
+      storePass = System.console().readPassword("\nPlease enter store passphrase: ")
+      storePass = new String(storePass)
+      keyPass = System.console().readPassword("\nPlease enter key passphrase: ")
+      keyPass = new String(keyPass)
+    }
+ 
+    if(storePass.size() <= 0) {
+      throw new InvalidUserDataException("You must enter a store password to proceed.")
+    }
+    
+    if(keyPass.size() <= 0) {
+      throw new InvalidUserDataException("You must enter a key password to proceed.")
+    }
+ 
+    // -----
+    // Do what you need to do with pass here!
+    // -----
+        android.signingConfigs.release.storePassword = storePass
+        android.signingConfigs.release.keyPassword = keyPass
+ 
+  } // end if has task
+} // end whenRead
+
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.9'
+    gradleVersion = '1.12'
 }
