Preliminary update to latest core build components

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
-import groovy.swing.SwingBuilder
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven { url 'http://download.crashlytics.com/maven' }
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
     }
+}
+
+allprojects {
+   repositories {
+       jcenter()
+   }
 }
 
 
@@ -18,7 +24,7 @@ repositories {
     maven { url 'http://download.crashlytics.com/maven' }
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 apply plugin: 'crashlytics'
 
 dependencies {
@@ -34,8 +40,8 @@ dependencies {
 
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         versionCode 1440
@@ -52,82 +58,27 @@ android {
             storeFile file("keystore")
             keyAlias "zandy"
             storePassword ""
-            keyPassword "" 
+            keyPassword ""
         }
     }
 
     buildTypes {
         release {
-            zipAlign true
+            zipAlignEnabled true
             signingConfig signingConfigs.release
-            runProguard false
-            proguardFile getDefaultProguardFile('proguard-android.txt')
+            minifyEnabled true
         }
     }
 
     lintOptions {
         abortOnError false
     }
-    
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
     }
 }
 
-gradle.taskGraph.whenReady { taskGraph ->
-
-  println taskGraph.allTasks
-  if(taskGraph.hasTask(':zandy:assembleGoogleRelease')) {
- 
-    def storePass = ''
-    def keyPass = ''
-    if(System.console() == null) {
-      new SwingBuilder().edt {
-        dialog(modal: true, // Otherwise the build will continue running before you closed the dialog
-            title: 'Enter password', // Dialog title
-            alwaysOnTop: true, // pretty much what the name says
-            resizable: false, // Don't allow the user to resize the dialog
-            locationRelativeTo: null, // Place dialog in center of the screen
-            pack: true, // We need to pack the dialog (so it will take the size of it's children)
-            show: true // Let's show it
-        ) {
-          vbox { // Put everything below each other
-            label(text: "Please enter store passphrase:")
-            storeInput = passwordField()
-            label(text: "Please enter key passphrase:")
-            keyInput = passwordField()
-            button(defaultButton: true, text: 'OK', actionPerformed: {
-              storePass = storeInput.password; // Set pass variable to value of input field
-              keyPass = storeInput.password; // Set pass variable to value of input field
-              dispose(); // Close dialog
-            })
-          } // vbox end
-        } // dialog end
-      } // edt end
-    } else {
-      storePass = System.console().readPassword("\nPlease enter store passphrase: ")
-      storePass = new String(storePass)
-      keyPass = System.console().readPassword("\nPlease enter key passphrase: ")
-      keyPass = new String(keyPass)
-    }
- 
-    if(storePass.size() <= 0) {
-      throw new InvalidUserDataException("You must enter a store password to proceed.")
-    }
-    
-    if(keyPass.size() <= 0) {
-      throw new InvalidUserDataException("You must enter a key password to proceed.")
-    }
- 
-    // -----
-    // Do what you need to do with pass here!
-    // -----
-        android.signingConfigs.release.storePassword = storePass
-        android.signingConfigs.release.keyPassword = keyPass
- 
-  } // end if has task
-} // end whenRead
-
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.12'
+    gradleVersion = '4.2.1'
 }
