--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,6 @@ dependencies {
     compile('oauth.signpost:signpost-commonshttp4:1.2.1.2') {
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
-    compile 'com.intellij:annotations:12.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
@@ -40,6 +39,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.zxing:android-integration:2.3.0'
 
+    compile 'com.android.support:support-annotations:25.3.1'
 //    compile project(":libzotero-java")
 }
 
