Fix missing props

--- a/build.gradle
+++ b/build.gradle
@@ -65,10 +65,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties.getProperty('keyAlias', '')
+            keyPassword keystoreProperties.getProperty('keyPassword', '')
+            storeFile file(keystoreProperties.getProperty('storeFile', ''))
+            storePassword keystoreProperties.getProperty('storePassword', '')
         }
     }
 
