--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -88,9 +88,9 @@
             android:name=".NoteActivity"
             android:label="@string/app_name"
             android:launchMode="standard" />
-
         <meta-data
-            android:name="com.crashlytics.ApiKey"
-            android:value="d02b3d0416bed4f24247e9114e295b0f38ae0455" />
+            android:name="io.fabric.ApiKey"
+            android:value="d02b3d0416bed4f24247e9114e295b0f38ae0455"
+            />
     </application>
 </manifest>
