--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
@@ -22,6 +24,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url 'https://maven.fabric.io/public' }
+    google()
 }
 
 apply plugin: 'com.android.application'
@@ -29,17 +32,17 @@ apply plugin: 'io.fabric'
 
 
 dependencies {
-    compile('oauth.signpost:signpost-commonshttp4:1.2.1.2') {
+    implementation('oauth.signpost:signpost-commonshttp4:1.2.1.2') {
         exclude group: 'org.apache.httpcomponents'
     }
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.squareup:otto:1.3.4'
-    compile 'com.google.zxing:android-integration:2.3.0'
+    implementation 'commons-io:commons-io:2.5'
+    implementation 'com.squareup:otto:1.3.4'
+    implementation 'com.google.zxing:android-integration:2.3.0'
 
-    compile 'com.android.support:support-annotations:25.3.1'
+    implementation 'com.android.support:support-annotations:26.1.0'
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -57,9 +60,15 @@ android {
         versionName "1.4.5.1"
     }
 
+    flavorDimensions "store"
+
     productFlavors {
-        amazon
-        google
+        amazon {
+            dimension "store"
+        }
+        google {
+            dimension "store"
+        }
     }
 
     signingConfigs {
