Add kotlin because why not

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 
 buildscript {
+    ext.kotlin_version = '1.1.51'
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
@@ -10,6 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.0-rc1'
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -28,6 +30,7 @@ repositories {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 
@@ -43,6 +46,7 @@ dependencies {
     implementation 'com.google.zxing:android-integration:2.3.0'
 
     implementation 'com.android.support:support-annotations:26.1.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
