--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -95,15 +95,16 @@
             android:label="@string/app_name"
             android:launchMode="standard" />
 
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="d02b3d0416bed4f24247e9114e295b0f38ae0455" />
-
         <activity
             android:name=".DrawerNavigationActivity"
             android:label="@string/title_activity_drawer_navigation"
             android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true"></activity>
+            android:exported="true" />
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="d02b3d0416bed4f24247e9114e295b0f38ae0455" />
+
     </application>
 
 </manifest>
