--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url 'https://maven.fabric.io/public' }
+    maven { url 'https://jitpack.io' }
     google()
 }
 
@@ -32,6 +33,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 apply plugin: 'org.jetbrains.kotlin.android.extensions'
+apply plugin: 'kotlin-kapt'
+
 androidExtensions {
     experimental = true
 }
@@ -48,6 +51,8 @@ dependencies {
     implementation 'com.squareup:otto:1.3.4'
     implementation 'com.google.zxing:android-integration:2.3.0'
 
+    implementation 'com.github.blocoio:faker:1.0.1'
+
     implementation 'com.android.support:support-annotations:26.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
@@ -57,6 +62,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    kapt 'com.android.databinding:compiler:3.0.0-rc2'
 
     testImplementation 'junit:junit:4.12'
 
@@ -82,6 +89,10 @@ android {
     buildToolsVersion "26.0.2"
 
     useLibrary 'org.apache.http.legacy'
+
+    dataBinding {
+        enabled = true
+    }
 
     defaultConfig {
         versionCode 1451
