--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.1.0-alpha04'
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
+        //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -85,7 +86,7 @@ def testProperties = new Properties()
 testProperties.load(new FileInputStream(testPropertiesFile))
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "27.0.1"
 
     useLibrary 'org.apache.http.legacy'
@@ -97,6 +98,9 @@ android {
     defaultConfig {
         versionCode 1451
         versionName "1.4.5.1"
+
+        minSdkVersion 14
+        targetSdkVersion 27
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
