--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ def testPropertiesFile = rootProject.file("test.properties")
 def testProperties = new Properties()
 testProperties.load(new FileInputStream(testPropertiesFile))
 
+testProperties.putAll(gradle.getStartParameter().getProjectProperties())
+
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
