--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
-        transitive = true;
+        transitive = true
     }
     implementation 'commons-io:commons-io:2.5'
     implementation 'com.squareup:otto:1.3.4'
@@ -58,6 +58,9 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestUtil 'com.android.support.test:orchestrator:1.0.1'
+
+    // Api v3
+    compile 'com.google.code.gson:gson:2.8.2'
 
 }
 
