added lombok support

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     // Api v3
     compile 'com.google.code.gson:gson:2.8.2'
+    compileOnly 'org.projectlombok:lombok:1.16.20'
 
 }
 
