--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compileOnly 'org.projectlombok:lombok:1.16.20'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
 }
 
