--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,8 @@ dependencies {
 
     // Api v3
     compile 'com.google.code.gson:gson:2.8.2'
-    compileOnly 'org.projectlombok:lombok:1.16.20'
+    provided 'org.projectlombok:lombok:1.16.20'
+    annotationProcessor 'org.projectlombok:lombok:1.16.20'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
